# deal-pipeline-monitoring-agent

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  WRITEUP.md  assignment.md  docker-compose.langfuse.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
Claude Sessions/Claude Session=Audit, Simplify, and Improve/: _convert.py  d9a2c3fd-c169-4396-9d59-1407fe6a9d38.jsonl  metadata.json  session.md
Claude Sessions/Claude Session=Debugging/: 4bd43b45-5ddc-4d38-8114-3b7b43355b7e.jsonl  metadata.json  session.md
Claude Sessions/Claude Session=Implement Deal Pipeline/: metadata.json  session.md
Claude Sessions/Claude Session=Setup Impeccable/: 945ef8c1-7f34-4791-bd8d-6638f99e839f.jsonl  metadata.json  session.md
Claude Sessions/Claude Session=Summarize Evals/: metadata.json  session.md
Claude Sessions/Claude Session=Working/: metadata.json  session.md
docs/: architecture.md  assumptions.md  blockers.md  reflection.md
eval/: EVAL_FINDINGS.md
eval/fixtures/: adversarial_balanced_opposing_signals.yaml  adversarial_conflicting_comm.yaml  adversarial_prior_breakage_healthy_now.yaml  adversarial_strong_single_signal.yaml  det_01_rofr_deadline_critical.yaml  (+34 more)
eval_results/: deep_scorecard_20260417_090000.md  results_20260417_090000.json  scorecard_20260417_090000.md
(+150 files in other folders)
